Bug 510008, clientX/Y not correct in popupshowing event for popup inside a frame, fix to use correct widget for event, r=roc