layout/xul/base/src/nsXULPopupManager.cpp
@@ -1018,7 +1018,12 @@ nsXULPopupManager::FirePopupShowingEvent(nsIContent* aPopup,
   //   all the globals people keep adding to nsIDOMXULDocument.
   nsEventStatus status = nsEventStatus_eIgnore;
   nsMouseEvent event(PR_TRUE, NS_XUL_POPUP_SHOWING, nsnull, nsMouseEvent::eReal);
-  presShell->GetViewManager()->GetRootWidget(getter_AddRefs(event.widget));
+
+  // coordinates are relative to the root widget
+  nsPresContext* rootPresContext =
+    presShell->GetPresContext()->RootPresContext();
+  rootPresContext->PresShell()->GetViewManager()->GetRootWidget(getter_AddRefs(event.widget));
+
   event.refPoint = mCachedMousePoint;
   nsEventDispatcher::Dispatch(aPopup, aPresContext, &event, nsnull, &status);
   mCachedMousePoint = nsIntPoint(0, 0);
